# SecureGitX

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
.github/workflows/DISCUSSION_TEMPLATE/: proposal.yml
docs/: rules-format.md
docs/cli/: config.md  daemon.md  directcmt.md  hook.md  init.md  rules.md  scan.md
docs/develop/: architecture.md  development.md  exitcodes.md
extensions/src/: command.ts  diagnostics.ts  extension.ts  scanner.ts
main/: securegitx.sh
scripts/: install.sh
src/securegitx/: __init__.py  cli.py  config.py  daemon.py  gitignore_builder.py  gitops.py  hooks.py  project_detect.py  report.py  rules_update.py  scanner.py  terminal.py
src/securegitx/rules/: __init__.py  allowlist.json  rules.json  schema.json
tests/: test_auth.bats  test_cli.py  test_config.py  test_daemon.py  test_gitignore.bats  test_gitignorebuild.py  test_gitops.py  test_hooks.py  test_projectdetect.py  test_report.py  test_rules.py  test_rules_update.py  test_scan.bats  test_scanner.py  test_terminal.py
tests/helpers/: helper.bash
wrappers/: allowlist.json  rules.json  securegitx_wrapper.py
