[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securegitx"
version = "2.0.0"
description = "Lightweight pre-commit tool that blocks secrets during git commits"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
securegitx = "securegitx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
securegitx = ["../../rules/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]