[build-system]
requires = ["setuptools>=77", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securegitx"
dynamic = ["version"]
description = "Pre-commit secret scanner"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
securegitx = "securegitx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"securegitx.rules" = ["*.json"]

[tool.setuptools_scm]
# Writes version to src/securegitx/_version.py at build time.
# Tag format: v1.2.3  →  __version__ = "1.2.3"
# Untagged:   v1.2.3-4-gabcdef  →  __version__ = "1.2.3.post4+gabcdef"
write_to = "src/securegitx/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = [
    "src/securegitx/terminal.py",
    "src/securegitx/_version.py",
]